Centered text in containers

--- a/assets/style.css
+++ b/assets/style.css
@@ -74,6 +74,9 @@ nav ul li {
 }
 
 .content section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #14213D;
     color: #E5E5E5;
 }
